위치 (position) 예제

--- a/05_CSS/quiz/layout/1_profile.html
+++ b/05_CSS/quiz/layout/1_profile.html
@@ -6,9 +6,9 @@
   <title>Document</title>
 
   <style>
-    .profile {
-      /* text-align: center; */
-    }
+    /* .profile {
+      text-align: center;
+    } */
     .profile>img {
       /* (참고) img는 인라인 요소이지만 가로/세로 길이 지정 가능 */
       width: 100px;
