--- a/05_CSS/quiz/layout/3_blog_list.html
+++ b/05_CSS/quiz/layout/3_blog_list.html
@@ -14,38 +14,57 @@
       text-decoration: none;
       color: black;
     }
+    
     .navbar {
       display: flex;
+      column-gap: 10px;
+    }
+    .navbar li {
+      width: 60px;
+      background-color: #eee;
       text-align: center;
-    }
-    .navbar > li {
-      width: 70px;
-      height: 40px;
-      line-height: 40px;
+      padding: 10px;
       border-radius: 5px;
-      background-color: #f1f1f1;
     }
-    li + li {
-      margin-left: 10px;
+    .navbar li a {
+      font-size: 20px;
     }
+
     .container {
       display: flex;
       width: 800px;
       margin: 0 auto;
     }
     .blog-content {
+      /* 영역 확인용 배경색 */
+      /* background-color: lightgray; */
       width: 80%;
+      height: 200px;
     }
-    .content-header {
-      display: flex;
+    .blog-img {
+      /* 영역 확인용 배경색 */
+      /* background-color: yellow; */
+      width: 20%;
+      height: 200px;
     }
+
     .blog-profile {
       width: 50px;
       height: 50px;
-      border-radius: 25px;
+      border-radius: 50%;
     }
-    .blog-name {
-      
+    .content-header {
+      display: flex;
+      align-items: center;
+    }
+    .blog-name > h4,
+    .blog-name > p {
+      margin: 5px; /* 마진 상쇄 일어남 */
+    }
+
+    .blog-img > img {
+      width: 100%;
+      height: 100%;
     }
   </style>
 </head>
