--- a/06_portfolio-site/css/main.css
+++ b/06_portfolio-site/css/main.css
@@ -56,6 +56,31 @@ img {
   margin: 24px auto 0;
 }
 
+.btn {
+  width: 120px;
+  padding: 10px;
+  display: block; /* a, span 같은 인라인 요소를 버튼으로 사용할 수도 있으니 블록으로 지정 */
+  border: 2px solid #333;
+  border-radius: 4px;
+  font-size: 16px;
+  font-weight: 500;
+  text-align: center;
+  cursor: pointer;
+  transition: 0.5s;
+}
+.btn:hover {
+  background-color: #333;
+  color: #fff;
+}
+.btn.btn--brown {
+  color: brown;
+  border-color: brown;
+}
+.btn.btn--brown:hover {
+  color: #fff;
+  background-color: brown;
+}
+
 /* HEADER */
 header {
   background-color: #fff;
@@ -178,6 +203,37 @@ header nav ul li a:hover {
   display: flex;
   flex-direction: column;
   align-items: center;
+
+  /* 애니메이션 효과 추가 */
+  opacity: 0;
+  transition: 1s;
+  /* 방법1: position */
+  /* position: relative;
+  top: 100px; */
+  /* 방법2: transform */
+  transform: translateY(100px);
+}
+.skill.show .skill__list > li {
+  opacity: 1;
+  /* 방법1: position */
+  /* top: 0; */
+  /* 방법2: transform */
+  transform: translateY(0);
+}
+.skill .skill__list > li:nth-child(1) {
+  transition-delay: 0.2s;
+}
+.skill .skill__list > li:nth-child(2) {
+  transition-delay: 0.4s;
+}
+.skill .skill__list > li:nth-child(3) {
+  transition-delay: 0.6s;
+}
+.skill .skill__list > li:nth-child(4) {
+  transition-delay: 0.8s;
+}
+.skill .skill__list > li:nth-child(5) {
+  transition-delay: 1s;
 }
 .skill .skill__list li div {
   width: 80px;
@@ -199,4 +255,41 @@ header nav ul li a:hover {
   font-size: 18px;
   font-weight: bold;
   margin: 30px 0 20px;
+}
+
+/* WORK */
+.work {
+  padding-top: 200px;
+}
+.work .port {
+  display: flex;
+}
+.work .port .port__img,
+.work .port .port__text {
+  width: 50%;
+}
+.work .port .port__img img {
+  width: 100%;
+  height: 100%;
+}
+.work .port .port__text {
+  font-size: 14px;
+  padding: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+.work .port .port__text h3 {
+  font-size: 20px;
+  font-weight: 800;
+}
+.work .port .port__text li {
+  line-height: 1.8;
+}
+.work .port .port__text li span {
+  font-weight: 700;
+}
+.work .port .btn-group {
+  display: flex;
+  column-gap: 40px;
 }
