--- a/06_portfolio-site/css/main.css
+++ b/06_portfolio-site/css/main.css
@@ -263,6 +263,7 @@ header nav ul li a:hover {
 }
 .work .port {
   display: flex;
+  margin: 20px 0;
 }
 .work .port .port__img,
 .work .port .port__text {
@@ -292,4 +293,40 @@ header nav ul li a:hover {
 .work .port .btn-group {
   display: flex;
   column-gap: 40px;
+}
+
+/* MODAL */
+#modal {
+  /* 화면 전체 영역 덮기 */
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  z-index: 999;
+  /* display: flex; */
+  justify-content: center;
+  align-items: center;
+  display: none;
+}
+#modal .modal__inner {
+  width: 80%;
+  position: relative;
+}
+#modal .modal__inner img {
+  width: 100%;
+}
+#modal .modal__inner .btn-close {
+  font-size: 40px;
+  color: #fff;
+  background-color: #eaeaea;
+  border-radius: 50%;
+  cursor: pointer;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+#modal .modal__inner .btn-close:hover {
+  background-color: #333;
 }
