--- a/06_portfolio-site/css/main.css
+++ b/06_portfolio-site/css/main.css
@@ -152,7 +152,7 @@ header nav ul li a:hover {
 }
 .about .about__wrapper .about__img img {
   width: 100%;
-  border-radius: 50%;  background-color: #333;
+  border-radius: 50%;  background-color: #07090a;
 }
 .about .about__wrapper .about__text {
   width: 45%;
@@ -205,7 +205,6 @@ header nav ul li a:hover {
 
   /* 애니메이션 효과 추가 */
   opacity: 0;
-  transition: 1s;
   /* 방법1: position */
   /* position: relative;
   top: 100px; */
@@ -213,6 +212,7 @@ header nav ul li a:hover {
   transform: translateY(100px);
 }
 .skill.show .skill__list > li {
+  transition: 0.5s;
   opacity: 1;
   /* 방법1: position */
   /* top: 0; */
@@ -220,19 +220,19 @@ header nav ul li a:hover {
   transform: translateY(0);
 }
 .skill .skill__list > li:nth-child(1) {
-  transition-delay: 0.2s;
+  transition-delay: 0.1s;
 }
 .skill .skill__list > li:nth-child(2) {
-  transition-delay: 0.4s;
+  transition-delay: 0.2s;
 }
 .skill .skill__list > li:nth-child(3) {
-  transition-delay: 0.6s;
+  transition-delay: 0.3s;
 }
 .skill .skill__list > li:nth-child(4) {
-  transition-delay: 0.8s;
+  transition-delay: 0.4s;
 }
 .skill .skill__list > li:nth-child(5) {
-  transition-delay: 1s;
+  transition-delay: 0.5s;
 }
 .skill .skill__list li div {
   width: 80px;
