--- a/06_portfolio-site copy/css/main.css
+++ b/06_portfolio-site copy/css/main.css
@@ -149,11 +149,48 @@ header nav ul li a:hover {
 }
 .about .about__wrapper .about__img {
   width: 40%;
+  position: relative;
 }
-.about .about__wrapper .about__img img {
+.about .about__wrapper .about__img > img {
   width: 100%;
-  border-radius: 50%;  background-color: #07090a;
+  opacity: 0.1;
 }
+.flip-card {
+  background-color: transparent;
+  /* width: 480px;
+  height: 480px; */
+  width: 100%;
+  height: 100%;
+  perspective: 1000px;
+  position: absolute;
+}
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+}
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+.flip-card-front, .flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+.flip-card-front img,
+.flip-card-back img {
+  width: 100%;
+  border-radius: 50%;
+  background-color: #07090a;
+}
+.flip-card-back {
+  transform: rotateY(180deg);
+}
+
 .about .about__wrapper .about__text {
   width: 45%;
   padding: 30p;
