포트폴리오 이미지 추가

--- a/06_portfolio-site copy/css/main.css
+++ b/06_portfolio-site copy/css/main.css
@@ -13,9 +13,23 @@ body {
   font-size: 16px;
   font-weight: 400;
   line-height: 1.6;
-  color: #333;
-  background-color: #fff8e8;
+  color: #eee;
+  background-color: #07090a;
   overflow-x: hidden;
+}
+
+.bg-img {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: -9;
+}
+.bg-img > img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 /* 영문에만 적용할 폰트 */
@@ -52,7 +66,7 @@ img {
   display: block;
   width: 80px;
   height: 2px;
-  background-color: #333;
+  background-color: #eee;
   margin: 24px auto 0;
 }
 
@@ -69,8 +83,8 @@ img {
   transition: 0.5s;
 }
 .btn:hover {
-  background-color: #333;
-  color: #fff;
+  background-color: #fff;
+  color: #333;
 }
 .btn.btn--brown {
   color: brown;
@@ -83,7 +97,7 @@ img {
 
 /* HEADER */
 header {
-  background-color: #fff;
+  background-color: #202020;
   border-bottom: 1px solid #c8c8c8;
   /* 고정된 헤더 만들기 */
   width: 100%;
@@ -92,13 +106,13 @@ header {
   z-index: 9;
 }
 header > .inner {
-  height: 60px;
+  height: 100px;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 header .logo img {
-  width: 40px;
+  width: 80px;
   /* 가로 너비만 지정하면 세로 높이는 비율에 맞춰 정해짐 */
 }
 header nav ul {
@@ -119,12 +133,12 @@ header nav ul li a:hover {
     헤더가 fixed 되어 일반 배치 흐름에서 벗어남
     fixed 헤더 다음에 오는 섹션은 헤더의 높이만큼 외부 여백 추가 필요
   */
-  margin-top: 60px;
+  margin-top: 100px;
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
-  height: calc(100% - 60px);
+  height: calc(100% - 100px);
 }
 .visual video {
   width: 100%;
@@ -147,13 +161,9 @@ header nav ul li a:hover {
   display: flex;
   justify-content: space-between;
 }
+
 .about .about__wrapper .about__img {
   width: 40%;
-  position: relative;
-}
-.about .about__wrapper .about__img > img {
-  width: 100%;
-  opacity: 0.1;
 }
 .flip-card {
   background-color: transparent;
@@ -162,17 +172,17 @@ header nav ul li a:hover {
   width: 100%;
   height: 100%;
   perspective: 1000px;
-  position: absolute;
 }
 .flip-card-inner {
   position: relative;
   width: 100%;
-  height: 100%;
+  /* height: 100%; */
+  padding-bottom: 100%;
   transition: transform 0.6s;
   transform-style: preserve-3d;
 }
 .flip-card:hover .flip-card-inner {
-  transform: rotateY(180deg);
+  transform: rotateY(-180deg);
 }
 .flip-card-front, .flip-card-back {
   position: absolute;
@@ -181,14 +191,17 @@ header nav ul li a:hover {
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
 }
-.flip-card-front img,
+.flip-card-front img {
+  width: 100%;
+  border-radius: 50%;
+  background-color: #252525;
+}
 .flip-card-back img {
   width: 100%;
   border-radius: 50%;
-  background-color: #07090a;
 }
 .flip-card-back {
-  transform: rotateY(180deg);
+  transform: rotateY(-180deg);
 }
 
 .about .about__wrapper .about__text {
@@ -242,6 +255,7 @@ header nav ul li a:hover {
 
   /* 애니메이션 효과 추가 */
   opacity: 0;
+  transition: 0.5s;
   /* 방법1: position */
   /* position: relative;
   top: 100px; */
@@ -249,7 +263,6 @@ header nav ul li a:hover {
   transform: translateY(100px);
 }
 .skill.show .skill__list > li {
-  transition: 0.5s;
   opacity: 1;
   /* 방법1: position */
   /* top: 0; */
