--- a/06_portfolio-site copy/css/main.css
+++ b/06_portfolio-site copy/css/main.css
@@ -30,6 +30,8 @@ body {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  filter: blur(5px);
+  -webkit-filter: blur(5px);
 }
 
 /* 영문에만 적용할 폰트 */
