--- a/06_portfolio-site copy/css/main.css
+++ b/06_portfolio-site copy/css/main.css
@@ -108,7 +108,7 @@ header {
   z-index: 9;
 }
 header > .inner {
-  height: 100px;
+  height: 80px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -135,12 +135,12 @@ header nav ul li a:hover {
     헤더가 fixed 되어 일반 배치 흐름에서 벗어남
     fixed 헤더 다음에 오는 섹션은 헤더의 높이만큼 외부 여백 추가 필요
   */
-  margin-top: 100px;
+  margin-top: 80px;
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
-  height: calc(100% - 100px);
+  height: calc(100% - 80px);
 }
 .visual video {
   width: 100%;
@@ -289,7 +289,7 @@ header nav ul li a:hover {
 .skill .skill__list li div {
   width: 80px;
   height: 50px;
-  background-color: #b9e3f9;
+  background-color: royalblue;
   border-radius: 50%;
   transform: rotate(-20deg);
   transition: 0.5s;
