--- a/06_portfolio-site copy/css/main.css
+++ b/06_portfolio-site copy/css/main.css
@@ -24,14 +24,13 @@ body {
   bottom: 0;
   left: 0;
   right: 0;
+  transition: 0.2s filter linear;
   z-index: -9;
 }
 .bg-img > img {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  filter: blur(5px);
-  -webkit-filter: blur(5px);
 }
 
 /* 영문에만 적용할 폰트 */
@@ -148,11 +147,20 @@ header nav ul li a:hover {
   object-fit: cover;
 }
 
+/* VISUAL-BG */
+.visual-bg {
+  margin-top: 100vh;
+}
+.visual-bg .visual-gap {
+  /* padding-top: 56.25%; */
+  padding-top: 25%;
+}
+
 /* ABOUT */
 .about {
   /* (주의) 100%는 부모의 가로 길이(<body>)가 기준이 됨 */
   /* margin-top: 100%; */
-  margin-top: 100vh;
+  /* margin-top: 100vh; */
   padding-top: 200px;
 }
 .about .inner {
