--- a/06_portfolio-site copy/css/main.css
+++ b/06_portfolio-site copy/css/main.css
@@ -146,6 +146,21 @@ header nav ul li a:hover {
   height: 100%;
   object-fit: cover;
 }
+.visual__text {
+  position: absolute;
+  width: 100%;
+  top: 100px;
+  text-align: center;
+  text-shadow: 3px 3px #07090a;
+}
+.visual__text .visual-name {
+  font-weight: bold;
+  font-size: 50px;
+}
+.visual__text h3 {
+  font-weight: bold;
+  font-size: 45px;
+}
 
 /* VISUAL-BG */
 .visual-bg {
