--- a/06_portfolio-site copy/css/main.css
+++ b/06_portfolio-site copy/css/main.css
@@ -145,11 +145,12 @@ header nav ul li a:hover {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  object-position: 0 20%;
 }
 .visual__text {
   position: absolute;
   width: 100%;
-  top: 100px;
+  top: 200px;
   text-align: center;
   text-shadow: 3px 3px #07090a;
 }
