--- a/06_portfolio-site copy/css/main.css
+++ b/06_portfolio-site copy/css/main.css
@@ -17,7 +17,7 @@ body {
   background-color: #07090a;
   overflow-x: hidden;
 }
-
+/* 
 .bg-img {
   position: fixed;
   top: 0;
@@ -31,7 +31,7 @@ body {
   width: 100%;
   height: 100%;
   object-fit: cover;
-}
+} */
 
 /* 영문에만 적용할 폰트 */
 .font-en {
@@ -134,18 +134,19 @@ header nav ul li a:hover {
     헤더가 fixed 되어 일반 배치 흐름에서 벗어남
     fixed 헤더 다음에 오는 섹션은 헤더의 높이만큼 외부 여백 추가 필요
   */
-  margin-top: 80px;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
-  height: calc(100% - 80px);
+  height: 100%;
+  z-index: -9;
 }
 .visual video {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  object-position: 0 20%;
+  /* object-position: 0 20%; */
+  transition: 0.2s filter linear;
 }
 .visual__text {
   position: absolute;
@@ -163,20 +164,11 @@ header nav ul li a:hover {
   font-size: 45px;
 }
 
-/* VISUAL-BG */
-.visual-bg {
-  margin-top: 100vh;
-}
-.visual-bg .visual-gap {
-  /* padding-top: 56.25%; */
-  padding-top: 25%;
-}
-
 /* ABOUT */
 .about {
   /* (주의) 100%는 부모의 가로 길이(<body>)가 기준이 됨 */
   /* margin-top: 100%; */
-  /* margin-top: 100vh; */
+  margin-top: 100vh;
   padding-top: 200px;
 }
 .about .inner {
