--- a/06_portfolio-site copy/css/main.css
+++ b/06_portfolio-site copy/css/main.css
@@ -13,10 +13,10 @@ body {
   font-size: 16px;
   font-weight: 400;
   line-height: 1.6;
-  color: #333;
-  background-color: #fff8e8;
-  /* color: #eee;
-  background-color: #07090a; */
+  /* color: #333;
+  background-color: #fff8e8; */
+  color: #eee;
+  background-color: #07090a;
   overflow-x: hidden;
 }
 
@@ -85,42 +85,45 @@ img {
 
 /* HEADER */
 header {
-  background-color: #202020;
+  /* background-color: #202020; */
   border-bottom: 1px solid #c8c8c8;
   /* 고정된 헤더 만들기 */
-  width: 100%;
+  height: 100%;
   position: fixed;
   top: 0;
+  left: 0;
   z-index: 9;
 }
 header > .inner {
-  height: 80px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+  width: 100px;
+  height: 100%;
 }
 header .logo img {
   width: 80px;
+  margin: 0 auto;
   /* 가로 너비만 지정하면 세로 높이는 비율에 맞춰 정해짐 */
 }
+header nav {
+  height: calc(100% - 80px);
+}
 header nav ul {
+  height: 100%;
   display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
 }
 header nav ul li {
-  padding: 10px 20px;
+  padding: 20px 10px;
   font-weight: 700;
 }
 header nav ul li a:hover {
-  color: orange;
+  color: royalblue;
   /* text-shadow: 1px 1px 5px #333; */
 }
 
 /* VISUAL */
 .visual {
-  /* (중요)
-    헤더가 fixed 되어 일반 배치 흐름에서 벗어남
-    fixed 헤더 다음에 오는 섹션은 헤더의 높이만큼 외부 여백 추가 필요
-  */
   position: fixed;
   top: 0;
   left: 0;
@@ -128,25 +131,45 @@ header nav ul li a:hover {
   height: 100%;
   z-index: -9;
 }
-.visual video {
+.visual .bg-img {
+  width: 100%;
+  height: 100%;
+  transition: 0.2s filter linear;
+}
+.visual .bg-img .bg-day {
+  position: absolute;
+  width: 100%;
+  height:100%;
+  opacity: 1;
+}
+.visual .bg-img .bg-night {
+  position: absolute;
+  width: 100%;
+  height:100%;
+  opacity: 0;
+}
+.visual img {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  /* object-position: 0 20%; */
-  transition: 0.2s filter linear;
 }
-.visual__text {
-  position: absolute;
-  width: 100%;
-  top: 200px;
+
+/* MAIN */
+.main {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.main__text {
   text-align: center;
   text-shadow: 3px 3px #07090a;
 }
-.visual__text .visual-name {
+.main__text .main-name {
   font-weight: bold;
   font-size: 50px;
 }
-.visual__text h3 {
+.main__text h3 {
   font-weight: bold;
   font-size: 45px;
 }
@@ -155,7 +178,7 @@ header nav ul li a:hover {
 .about {
   /* (주의) 100%는 부모의 가로 길이(<body>)가 기준이 됨 */
   /* margin-top: 100%; */
-  margin-top: 100vh;
+  /* margin-top: 100vh; */
   padding-top: 200px;
 }
 .about .inner {
@@ -163,12 +186,13 @@ header nav ul li a:hover {
   position: relative;
 }
 .about .about__wrapper {
-  display: flex;
-  justify-content: space-between;
+  /* display: flex;
+  justify-content: space-between; */
 }
 
 .about .about__wrapper .about__img {
-  width: 40%;
+  width: 20%;
+  margin: 0 auto;
 }
 .flip-card {
   background-color: transparent;
@@ -210,23 +234,27 @@ header nav ul li a:hover {
 }
 
 .about .about__wrapper .about__text {
+  margin: 0 auto;
   width: 45%;
-  padding: 30p;
+  padding: 30px;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
 }
 .about .about__wrapper .about__text .slogan {
+  text-align: center;
   font-weight: bold;
   font-size: 35px;
 }
 .about .about__wrapper .about__text h3 {
+  text-align: center;
   font-size: 20px;
   font-weight: 600;
 }
 .about .about__wrapper .about__text h4 {
   font-size: 18px;
   font-weight: 600;
+  margin-top: 16px;
   margin-bottom: 16px;
 }
 .about .about__wrapper .about__text li {
