changed day/night img to higher resolution

--- a/06_portfolio-site copy/css/main.css
+++ b/06_portfolio-site copy/css/main.css
@@ -75,12 +75,12 @@ img {
   color: #333;
 }
 .btn.btn--brown {
-  color: brown;
-  border-color: brown;
+  color: red;
+  border-color: red;
 }
 .btn.btn--brown:hover {
   color: #fff;
-  background-color: brown;
+  background-color: red;
 }
 
 /* HEADER */
@@ -146,7 +146,8 @@ header nav ul li a:hover {
   position: absolute;
   width: 100%;
   height:100%;
-  opacity: 1;
+  opacity: 0;
+  /* z-index: -1; */
 }
 .visual img {
   width: 100%;
@@ -162,6 +163,9 @@ header nav ul li a:hover {
   align-items: center;
 }
 .main__text {
+  padding: 40px 120px;
+  border-radius: 20px;
+  background-color: rgba(0, 0, 0, 0.5);
   text-align: center;
   text-shadow: 3px 3px #07090a;
 }
@@ -179,11 +183,16 @@ header nav ul li a:hover {
   /* (주의) 100%는 부모의 가로 길이(<body>)가 기준이 됨 */
   /* margin-top: 100%; */
   /* margin-top: 100vh; */
-  margin-top: 200px;
-  padding-top: 200px;
+  
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* margin-top: 200px;
+  padding-top: 200px; */
 }
 .about .inner {
-  padding-bottom: 30px;
+  
   position: relative;
 }
 /* .about .about__wrapper {
@@ -192,7 +201,7 @@ header nav ul li a:hover {
 } */
 
 .about .about__wrapper .about__img {
-  width: 20%;
+  width: 50%;
   margin: 0 auto;
 }
 .flip-card {
@@ -236,7 +245,7 @@ header nav ul li a:hover {
 
 .about .about__wrapper .about__text {
   margin: 0 auto;
-  width: 45%;
+  width: 100%;
   padding: 30px;
   display: flex;
   flex-direction: column;
@@ -275,8 +284,12 @@ header nav ul li a:hover {
 
 /* SKILL */
 .skill {
-  margin-top: 200px;
-  padding-top: 200px;
+  /* margin-top: 200px;
+  padding-top: 200px; */
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .skill .skill__list {
   display: flex;
@@ -285,6 +298,7 @@ header nav ul li a:hover {
 }
 .skill .skill__list > li {
   width: 200px;
+  margin: 0 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -335,8 +349,10 @@ header nav ul li a:hover {
 
 /* WORK */
 .work {
-  margin-top: 200px;
-  padding-top: 200px;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .work .port {
   display: flex;
@@ -374,9 +390,15 @@ header nav ul li a:hover {
 
 /* CONTACT */
 .contact {
-  margin-top: 200px;
-  padding-top: 200px;
-  padding-bottom: 160px;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.contact .inner {
+  padding: 60px 80px;
+  border-radius: 20px;
+  background-color: rgba(0, 0, 0, 0.3);
 }
 .contact .contact__info li {
   line-height: 2;
@@ -430,10 +452,22 @@ header nav ul li a:hover {
 }
 
 /* FOOTER */
+footer {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+footer .inner {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 100px;
+}
 footer .copyright {
   text-align: center;
   font-weight: 600;
-  line-height: 200px;
+  /* line-height: 200px; */
 }
 
 /* MODAL */
