--- a/06_portfolio-site copy/css/main.css
+++ b/06_portfolio-site copy/css/main.css
@@ -471,7 +471,7 @@ footer .copyright {
 }
 
 /* MODAL */
-#modal {
+#modal1 {
   /* 화면 전체 영역 덮기 */
   position: fixed;
   top: 0;
@@ -479,30 +479,69 @@ footer .copyright {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.7);
-  z-index: 999;
-  /* display: flex; */
+  z-index: -999;
+  display: flex;
   justify-content: center;
   align-items: center;
-  display: none;
+  /* display: none; */
+  opacity: 0;
+  transition: 0.5s;
 }
-#modal .modal__inner {
+#modal1 .modal1__inner {
   width: 80%;
   position: relative;
 }
-#modal .modal__inner img {
+#modal1 .modal1__inner img {
   width: 100%;
 }
-#modal .modal__inner .btn-close {
+#modal1 .modal1__inner .btn-close {
   font-size: 40px;
   color: #fff;
-  background-color: #eaeaea;
+  background-color: #333;
   border-radius: 50%;
   cursor: pointer;
   position: absolute;
   top: 10px;
   right: 10px;
 }
-#modal .modal__inner .btn-close:hover {
+#modal1 .modal1__inner .btn-close:hover {
+  background-color: #333;
+}
+
+#modal2 {
+  /* 화면 전체 영역 덮기 */
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  z-index: -999;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* display: none; */
+  opacity: 0;
+  transition: 0.5s;
+}
+#modal2 .modal2__inner {
+  width: 80%;
+  position: relative;
+}
+#modal2 .modal2__inner img {
+  width: 100%;
+}
+#modal2 .modal2__inner .btn-close {
+  font-size: 40px;
+  color: #fff;
+  background-color: #333;
+  border-radius: 50%;
+  cursor: pointer;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+#modal2 .modal2__inner .btn-close:hover {
   background-color: #333;
 }
 
