--- a/06_portfolio-site copy/css/main.css
+++ b/06_portfolio-site copy/css/main.css
@@ -158,9 +158,26 @@ header nav ul li a:hover {
 /* MAIN */
 .main {
   height: 100vh;
+  min-height: 800px;
+  max-height: 2160px;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.main.show {
+  animation: shake 1s;
+}
+@keyframes shake {
+  /* 셀렉터: 애니메이션이 진행되는 과정을 선택해서 지정
+    0-100%
+    from (0%와 동일)
+    to (100%와 동일)
+  */
+  0% { transform: rotate(0deg);}
+  25% { transform: rotate(-4deg);}
+  50% { transform: rotate(4deg);}
+  75% { transform: rotate(-4deg);}
+  100% { transform: rotate(0deg);}
 }
 .main__text {
   padding: 40px 120px;
@@ -183,8 +200,8 @@ header nav ul li a:hover {
   /* (주의) 100%는 부모의 가로 길이(<body>)가 기준이 됨 */
   /* margin-top: 100%; */
   /* margin-top: 100vh; */
-  
   height: 100vh;
+  min-height: 800px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -220,7 +237,10 @@ header nav ul li a:hover {
   transition: transform 0.6s;
   transform-style: preserve-3d;
 }
-.flip-card:hover .flip-card-inner {
+/* .flip-card:hover .flip-card-inner {
+  transform: rotateY(-180deg);
+} */
+.about.show .flip-card-inner {
   transform: rotateY(-180deg);
 }
 .flip-card-front, .flip-card-back {
@@ -287,6 +307,8 @@ header nav ul li a:hover {
   /* margin-top: 200px;
   padding-top: 200px; */
   height: 100vh;
+  min-height: 800px;
+  max-height: 2160px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -350,6 +372,8 @@ header nav ul li a:hover {
 /* WORK */
 .work {
   height: 100vh;
+  min-height: 800px;
+  max-height: 2160px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -391,6 +415,8 @@ header nav ul li a:hover {
 /* CONTACT */
 .contact {
   height: 100vh;
+  min-height: 800px;
+  max-height: 2160px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -479,13 +505,11 @@ footer .copyright {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.7);
-  z-index: -999;
-  display: flex;
+  z-index: 999;
+  /* display: flex; */
   justify-content: center;
   align-items: center;
-  /* display: none; */
-  opacity: 0;
-  transition: 0.5s;
+  display: none;
 }
 #modal1 .modal1__inner {
   width: 80%;
@@ -516,13 +540,11 @@ footer .copyright {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.7);
-  z-index: -999;
-  display: flex;
+  z-index: 999;
+  /* display: flex; */
   justify-content: center;
   align-items: center;
-  /* display: none; */
-  opacity: 0;
-  transition: 0.5s;
+  display: none;
 }
 #modal2 .modal2__inner {
   width: 80%;
