--- a/06_portfolio-site copy/css/main.css
+++ b/06_portfolio-site copy/css/main.css
@@ -13,8 +13,6 @@ body {
   font-size: 16px;
   font-weight: 400;
   line-height: 1.6;
-  /* color: #333;
-  background-color: #fff8e8; */
   color: #eee;
   background-color: #07090a;
   overflow-x: hidden;
@@ -31,15 +29,11 @@ a {
 }
 
 .inner {
-  /* 고정 길이=고정형 */
-  /* width: 1200px; */
-  /* 최대값만 제한=반응형 */
   max-width: 1200px;
   margin: 0 auto;
 }
 
 img {
-  /* 이미지가 인라인 요소라서 발생하는 문자 기준선(baseline) 아래의 공간을 제거하기 위해 */
   display: block;
 }
 
@@ -61,7 +55,7 @@ img {
 .btn {
   width: 120px;
   padding: 10px;
-  display: block; /* a, span 같은 인라인 요소를 버튼으로 사용할 수도 있으니 블록으로 지정 */
+  display: block;
   border: 2px solid #333;
   border-radius: 4px;
   font-size: 16px;
@@ -85,9 +79,6 @@ img {
 
 /* HEADER */
 header {
-  /* background-color: #202020; */
-  /* border-bottom: 1px solid #c8c8c8; */
-  /* 고정된 헤더 만들기 */
   height: 100%;
   position: fixed;
   top: 0;
@@ -101,7 +92,6 @@ header > .inner {
 header .logo img {
   width: 80px;
   margin: 0 auto;
-  /* 가로 너비만 지정하면 세로 높이는 비율에 맞춰 정해짐 */
 }
 header nav {
   height: calc(100% - 80px);
@@ -116,10 +106,57 @@ header nav ul {
 header nav ul li {
   padding: 20px 10px;
   font-weight: 700;
+  transition: 0.5s;
 }
 header nav ul li a:hover {
   color: royalblue;
   /* text-shadow: 1px 1px 5px #333; */
+}
+
+.header_logo {
+  width: 100%;
+  text-align: center;
+  border-radius: 15px;
+  transition: 0.5s;
+}
+.header_logo.active {
+  background-color: rgba(255, 255, 255, 0.5);
+}
+.header_about {
+  width: 100%;
+  text-align: center;
+  border-radius: 15px;
+  transition: 0.5s;
+}
+.header_about.active {
+  background-color: rgba(255, 255, 255, 0.2);
+}
+.header_skill {
+  width: 100%;
+  text-align: center;
+  border-radius: 15px;
+  transition: 0.5s;
+}
+.header_skill.active {
+  background-color: rgba(255, 255, 255, 0.2);
+}
+.header_work {
+  width: 100%;
+  text-align: center;
+  border-radius: 15px;
+  transition: 0.5s;
+}
+.header_work.active {
+  background-color: rgba(255, 255, 255, 0.2);
+}
+.header_contact {
+  width: 100%;
+  text-align: center;
+  border-radius: 15px;
+  transition: 0.5s;
+}
+.header_contact.active {
+  background-color: rgba(255, 255, 255, 0.2);
 }
 
 /* VISUAL */
@@ -158,8 +195,7 @@ header nav ul li a:hover {
 /* MAIN */
 .main {
   height: 100vh;
-  min-height: 800px;
-  max-height: 2160px;
+  
   display: flex;
   justify-content: center;
   align-items: center;
@@ -168,15 +204,10 @@ header nav ul li a:hover {
   animation: shake 1s;
 }
 @keyframes shake {
-  /* 셀렉터: 애니메이션이 진행되는 과정을 선택해서 지정
-    0-100%
-    from (0%와 동일)
-    to (100%와 동일)
-  */
   0% { transform: rotate(0deg);}
-  25% { transform: rotate(-4deg);}
-  50% { transform: rotate(4deg);}
-  75% { transform: rotate(-4deg);}
+  25% { transform: rotate(-2deg);}
+  50% { transform: rotate(2deg);}
+  75% { transform: rotate(-2deg);}
   100% { transform: rotate(0deg);}
 }
 .main__text {
@@ -197,19 +228,13 @@ header nav ul li a:hover {
 
 /* ABOUT */
 .about {
-  /* (주의) 100%는 부모의 가로 길이(<body>)가 기준이 됨 */
-  /* margin-top: 100%; */
-  /* margin-top: 100vh; */
   height: 100vh;
-  min-height: 800px;
+  
   display: flex;
   justify-content: center;
   align-items: center;
-  /* margin-top: 200px;
-  padding-top: 200px; */
 }
 .about .inner {
-  
   position: relative;
 }
 /* .about .about__wrapper {
@@ -223,8 +248,6 @@ header nav ul li a:hover {
 }
 .flip-card {
   background-color: transparent;
-  /* width: 480px;
-  height: 480px; */
   width: 100%;
   height: 100%;
   perspective: 1000px;
@@ -232,7 +255,6 @@ header nav ul li a:hover {
 .flip-card-inner {
   position: relative;
   width: 100%;
-  /* height: 100%; */
   padding-bottom: 100%;
   transition: transform 0.6s;
   transform-style: preserve-3d;
@@ -274,17 +296,17 @@ header nav ul li a:hover {
 .about .about__wrapper .about__text .slogan {
   text-align: center;
   font-weight: bold;
-  font-size: 35px;
+  font-size: 50px;
 }
 .about .about__wrapper .about__text h3 {
   text-align: center;
-  font-size: 20px;
+  font-size: 40px;
   font-weight: 600;
 }
 .about .about__wrapper .about__text h4 {
   font-size: 18px;
   font-weight: 600;
-  margin-top: 16px;
+  margin-top: 32px;
   margin-bottom: 16px;
 }
 .about .about__wrapper .about__text li {
@@ -304,11 +326,8 @@ header nav ul li a:hover {
 
 /* SKILL */
 .skill {
-  /* margin-top: 200px;
-  padding-top: 200px; */
   height: 100vh;
-  min-height: 800px;
-  max-height: 2160px;
+  
   display: flex;
   justify-content: center;
   align-items: center;
@@ -372,8 +391,7 @@ header nav ul li a:hover {
 /* WORK */
 .work {
   height: 100vh;
-  min-height: 800px;
-  max-height: 2160px;
+  
   display: flex;
   justify-content: center;
   align-items: center;
@@ -382,10 +400,28 @@ header nav ul li a:hover {
   display: flex;
   margin: 20px 0;
 }
-.work .port .port__img,
+.work .port .port__img {
+  width: 50%;
+  transition: 1s;
+  transform: translateX(-100px);
+  opacity: 0;
+}
+.work.show .port .port__img {
+  transform: translateX(0);
+  opacity: 1;
+}
 .work .port .port__text {
   width: 50%;
+  transition: 1s;
+  transform: translateX(100px);
+  opacity: 0;
 }
+.work.show .port .port__text {
+  transform: translateX(0);
+  opacity: 1;
+}
+
+
 .work .port .port__img img {
   width: 100%;
   height: 100%;
@@ -415,8 +451,7 @@ header nav ul li a:hover {
 /* CONTACT */
 .contact {
   height: 100vh;
-  min-height: 800px;
-  max-height: 2160px;
+  
   display: flex;
   justify-content: center;
   align-items: center;
