work section 이미지를 영상으로 교체

--- a/06_portfolio-site copy/css/main.css
+++ b/06_portfolio-site copy/css/main.css
@@ -4,9 +4,8 @@
 }
 
 html {
-  /* 스크롤 이동을 부드럽게 */
-  scroll-behavior: smooth;
   scroll-snap-type: y mandatory;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -21,6 +20,7 @@ body {
 
 section {
   scroll-snap-align: start;
+  scroll-snap-stop: always
 }
 
 /* 영문에만 적용할 폰트 */
@@ -38,7 +38,7 @@ a {
   margin: 0 auto;
 }
 
-img {
+img, video {
   display: block;
 }
 
@@ -405,13 +405,16 @@ header nav ul li a:hover {
   display: flex;
   margin: 20px 0;
 }
-.work .port .port__img {
+.work .port .port__video {
   width: 50%;
   transition: 1s;
   transform: translateX(-100px);
   opacity: 0;
 }
-.work.show .port .port__img {
+.work.show .port .port__video {
+  display: flex;
+  justify-content: end;
+  align-items: center;
   transform: translateX(0);
   opacity: 1;
 }
@@ -426,10 +429,10 @@ header nav ul li a:hover {
   opacity: 1;
 }
 
-
-.work .port .port__img img {
-  width: 100%;
-  height: 100%;
+.work .port .port__video video {
+  width: 70%;
+  /* height: 80%; */
+  object-fit: contain;
 }
 .work .port .port__text {
   font-size: 14px;
@@ -555,7 +558,7 @@ footer .copyright {
   width: 80%;
   position: relative;
 }
-#modal1 .modal1__inner img {
+#modal1 .modal1__inner video {
   width: 100%;
 }
 #modal1 .modal1__inner .btn-close {
@@ -590,7 +593,7 @@ footer .copyright {
   width: 80%;
   position: relative;
 }
-#modal2 .modal2__inner img {
+#modal2 .modal2__inner video {
   width: 100%;
 }
 #modal2 .modal2__inner .btn-close {
